<?xml version="1.0"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    android:id="@+id/gridview" 
    android:layout_height="fill_parent" 
    android:layout_width="fill_parent"
    android:background="#222222">

<!-- relativelayout is not actually useless. Remove it and see what happens yourself... -->



<RelativeLayout 
    android:layout_height="wrap_content">

<!-- The top left image - should/ could be same as icon image -->


<ImageView 
    android:id="@+id/title_image" 
    android:layout_height="wrap_content" 
    android:layout_width="wrap_content" android:src="@drawable/ic_launcher" 
    android:contentDescription="@string/problem_name" 
    android:layout_alignParentLeft="true"/>

<!-- The title - Problem Name -->


<TextView 
    android:layout_marginRight="10dp" 
    android:id="@+id/problem_title_label" 
    android:layout_height="wrap_content" 
    android:layout_width="wrap_content" 
    android:text="@string/problem_name" 
    style="@style/title_text"
    android:textSize="25sp" 
    android:layout_marginTop="10dp" 
    android:layout_alignParentRight="true"/>

</RelativeLayout>


<TableRow 
    android:id="@+id/tableRow2_text_body" 
    android:layout_height="wrap_content" 
    android:layout_width="wrap_content">

<!-- The main text body of the problem -->


<TextView 
    android:id="@+id/description_text_label" 
    android:layout_height="180dp"
    android:layout_width="wrap_content" 
    style="@style/description_text"
    android:text="@string/diseasedescription" 
    android:layout_marginTop="10dp"
    android:scrollbars = "vertical"/>

</TableRow>


<TableRow 
    android:id="@+id/tableRow3_large_image" 
    android:layout_height="wrap_content" 
    android:layout_width="wrap_content">

<ImageView 
    android:id="@+id/galery_image_1" 
    android:layout_height="150dp" 
    android:layout_width="wrap_content" 
    android:src="@drawable/blacklegmain" 
    android:contentDescription="@string/image"/>

</TableRow>


<HorizontalScrollView 
    android:id="@+id/horizontal_gallery" 
    android:layout_height="60dp" 
    android:layout_width="wrap_content" 
    android:layout_marginTop="10dp" 
    android:fillViewport="true">


<LinearLayout 
    android:id="@+id/innerLay" 
    android:layout_height="wrap_content" 
    android:layout_width="wrap_content" 
    android:orientation="horizontal" 
    android:gravity="center_vertical">

<ImageView 
    android:id="@+id/image1" 
    android:layout_height="wrap_content" 
    android:layout_width="wrap_content" 
    android:src="@drawable/blacklegmain" 
    android:contentDescription="@string/problem_name"
    android:clickable="true"/>

<ImageView 
    android:id="@+id/image2" 
    android:layout_height="wrap_content" 
    android:layout_width="wrap_content" 
    android:src="@drawable/blackscurfmainimage" 
    android:contentDescription="@string/problem_name"
    android:clickable="true"/>

<ImageView 
    android:id="@+id/image3" 
    android:layout_height="wrap_content" 
    android:layout_width="wrap_content" 
    android:src="@drawable/blackscurfpits" 
    android:contentDescription="@string/problem_name"
    android:clickable="true"/>

<ImageView 
    android:id="@+id/image4" 
    android:layout_height="wrap_content" 
    android:layout_width="wrap_content" 
    android:src="@drawable/commonscab1" 
    android:contentDescription="@string/problem_name"
    android:clickable="true"/>

<ImageView 
    android:id="@+id/image5" 
    android:layout_height="wrap_content" 
    android:layout_width="wrap_content" 
    android:src="@drawable/dickeyasolanistem" 
    android:contentDescription="@string/problem_name"
    android:clickable="true"/>

<ImageView 
    android:id="@+id/image6" 
    android:layout_height="wrap_content" 
    android:layout_width="wrap_content" 
    android:src="@drawable/earlyblight" 
    android:contentDescription="@string/problem_name"
    android:clickable="true"/>

<ImageView 
    android:id="@+id/image7" 
    android:layout_height="wrap_content" 
    android:layout_width="wrap_content" 
    android:src="@drawable/earlyblightmainimage" 
    android:contentDescription="@string/problem_name"
    android:clickable="true"/>

<ImageView 
    android:id="@+id/image8" 
    android:layout_height="wrap_content" 
    android:layout_width="wrap_content" 
    android:src="@drawable/lateblighttuber" 
    android:contentDescription="@string/problem_name"
    android:clickable="true"/>

</LinearLayout>

</HorizontalScrollView>

</TableLayout>